--- a/src/main/resources/static/web/shop.html
+++ b/src/main/resources/static/web/shop.html
@@ -15,11 +15,7 @@
 
 <body id="app">
     <!-- NAV -->
-<<<<<<< HEAD
-    <nav class="min-h-[10vh] lg:min-h-[15vh] relative bg-[#1E1E1E] shadow-lg ">
-=======
     <nav class="mi-h-[10vh] lg:min-h-[15vh] relative bg-[#1E1E1E] shadow-lg ">
->>>>>>> b836345720d6dfd4f0f8b22db356245c1726a9b4
         <div class="container px-6 py-6 mx-auto">
             <div class="lg:flex lg:items-center lg:justify-between">
                 <div class="flex items-center justify-between w-full">
@@ -78,45 +74,27 @@
 
                 <!-- drawer component -->
                 <div id="drawer-right-example"
-                    class="fixed z-40 h-screen p-4 overflow-y-auto bg-white w-80 dark:bg-gray-800 transition-transform right-0 top-0 translate-x-full"
+                    class="fixed z-40 h-screen p-4 overflow-y-auto w-[550px] bg-gray-800 transition-transform right-0 top-0 translate-x-full"
                     tabindex="-1" aria-labelledby="drawer-right-label" aria-hidden="true">
-                    <h5 id="drawer-right-label"
-                        class="inline-flex items-center mb-4 text-base font-semibold text-gray-500 dark:text-gray-400">
-                        <svg class="w-5 h-5 mr-2" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
-                                clip-rule="evenodd"></path>
-                        </svg>Right drawer
-                    </h5>
-                    <button type="button" data-drawer-dismiss="drawer-right-example"
-                        aria-controls="drawer-right-example"
-                        class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 absolute top-2.5 right-2.5 inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white">
-                        <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                        <span class="sr-only">Close menu</span>
-                    </button>
-                    <p class="mb-6 text-sm text-gray-500 dark:text-gray-400">Supercharge your hiring by taking advantage
-                        of our <a href="#"
-                            class="text-blue-600 underline dark:text-blue-500 hover:no-underline">limited-time sale</a>
-                        for Flowbite Docs + Job Board. Unlimited access to over 190K top-ranked candidates and the #1
-                        design job board.</p>
-                    <div class="grid grid-cols-2 gap-4">
-                        <a href="#"
-                            class="px-4 py-2 text-sm font-medium text-center text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Learn
-                            more</a>
-                        <a href="#"
-                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Get
-                            access <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd"></path>
-                            </svg></a>
+                    <div class="flex flex-col gap-5 mt-4 lg:mt-0">
+                        <h2 class="text-center text-white text-xl">
+                            Shopping cart
+                        </h2>
+                        <h4 class="text-right text-white">
+                            Product list
+                        </h4>
+                        <div class="flex flex-wrap gap-3">
+                            <div v-for="product in cartProducts" class="flex justify-evenly items-center w-full">
+                                <img :src="product.thumbnailUrl" class="h-24 object-contain">
+                                <h3 class="text-white truncate w-[200px]">{{product.name}}</h3>
+                                <div class="bg-yellow-400  flex justify-between items-center gap-2 px-1 py-2 border rounded">
+                                    <ion-icon @click="deleteItemCart(product)" class="cursor-pointer text-black text-2xl"
+                                        name="remove-outline"></ion-icon>
+                                    <p class="text-black text-xl truncate">{{product.quantity}}</p>
+                                    <ion-icon @click="addCart(product)" class="cursor-pointer text-black text-2xl" name="add-outline"></ion-icon>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -138,8 +116,7 @@
                                     <ion-icon @click="deleteItemCart(product)" class="text-black text-2xl"
                                         name="remove-outline"></ion-icon>
                                     <p class="text-black text-xl truncate">{{product.quantity}}</p>
-                                    <ion-icon @click="addCart(product)" class=" text-black text-2xl" name="add-outline">
-                                    </ion-icon>
+                                    <ion-icon @click="addCart(product)" class=" text-black text-2xl" name="add-outline"></ion-icon>
                                 </div>
                             </div>
                         </div>
@@ -150,15 +127,16 @@
     </nav>
 
 
-    <section class="flex  w-full flex-row flex-wrap justify-center gap-10 pt-5">
-        <div class="h-full w-[30vh]">
+    <section class="flex w-full  lg:flex-row flex-wrap justify-center gap-10 pt-5">
+        <!-- CATEGORIES  -->
+        <div class="h-full w-[30vh] hidden lg:flex">
             <div class="p-5">
                 <div class=" flex flex-col gap-5 ">
                     <h2 class="font-bold text-3xl cursor-default">
                         Categories
                     </h2>
                     <div v-for="category in categories" class="cursor-pointer">
-                        <h4 @click="showCategories(category)" :class="checkedCategory == category ? 'font-bold' : ''"
+                        <h4  @click="selectFilter(category)" :class="checkedCategory == category ? 'font-bold' : ''"
                             class="text-xl">
                             {{category}}
                         </h4>
@@ -178,10 +156,9 @@
                     </h2>
                     <input @input="rangePriceFilter(inputRange)" v-model="inputRange" type="range" name="priceRange"
                         id="priceRange">
-                    <h4 class="text-red-600 text-xl font-bold">Up to: ${{inputRange}}</h4>
+                    <h4 class="text-red-600 text-xl font-bold">Up to: {{moneyFormat.format(inputRange)}}</h4>
                 </div>
             </div>
-
         </div>
         <div class="min-h-full w-[120vh]">
             <div class="p-5 flex flex-col">
@@ -201,19 +178,19 @@
                     <div v-for="(product, i) in filteredProducts"
                         class="overflow-hidden rounded shadow flex flex-col gap-2 w-full lg:w-[290px] lg:h-[430px]">
                         <div class="flex items-center shadow-lg justify-center">
-                            <img src="../../../../../../../suplements imgs/bcaaULTRATECH.png"
+                            <img src="/web/assets/images/trainer4.png"
                                 class="hover:rotate-12 object-contain h-[210px] transition-all duration-150 hover:scale-[1.4] absolute"
                                 alt="product.id">
                             <img v-if="i % 2 == 0" class="hidden lg:block  object-cover" :src="productsBg[1]"
                                 alt="NIKE AIR">
                             <img v-else class="hidden lg:block object-cover " :src="productsBg[0]">
                         </div>
-                        <div class="mt-3 flex flex-col gap-2">
-                            <h2 class="text-xl font-medium text-gray-700">Whey protein z-10 aguante river</h2>
-                            <div class="flex justify-between items-center">
-                                <h3 class="font-bold text-xl text-[#1e1e1e]">$49.99</h3>
+                        <div class="flex flex-col justify-between h-full">
+                            <h2 class="text-xl font-medium text-gray-700 ">{{product.name}}</h2>
+                            <div class="flex justify-between items-center p-3">
+                                <h3 class="font-bold text-xl text-[#1e1e1e]">{{moneyFormat.format(product.price)}}</h3>
                                 <button @click="addCart(product)"
-                                    class="hover:bg-[#f1d24d] transition-all duration-150 flex flex-row-reverse gap-2 jusfy-around items-center bg-gray-900 px-2 py-1 rounded mr-4">
+                                    class="hover:bg-[#f1d24d] transition-all duration-150 flex flex-row-reverse gap-2 jusfy-around items-center bg-gray-900 px-2 py-1 rounded">
                                     <h4 class="text-white font-medium">Add to cart</h4>
                                     <div class="relative transition-colors duration-300 transform text-white">
                                         <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none"
