--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon-16x16.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/png">
         
     <!--====== Magnific Popup CSS ======-->
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -67,8 +67,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logofinal.png" alt="Logo">
+                            <a class="d-flex flex-row justify-content-center align-items-center navbar-brand " href="index.html">
+                                <img class="pr-3" style="height: 70px;" src="assets/images/logoBalcam-01-01.png" alt="Logo">
+                                <div class="pt-2 d-flex flex-column justify-content-center align-items-center">
+                                    <H4>BALCAM <span class="yellow-color">'S</span></H4>
+                                    <h4>GYM</h4>
+                                </div>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
