--- a/src/main/resources/static/web/shop.html
+++ b/src/main/resources/static/web/shop.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="assets/images/favicon-16x16.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/images/favicon-32x32.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../web/assets/css/shop.css">
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
@@ -76,15 +76,15 @@
                     class="fixed z-40 h-screen p-4 overflow-y-auto w-[550px] bg-gray-800 transition-transform right-0 top-0 translate-x-full"
                     tabindex="-1" aria-labelledby="drawer-right-label" aria-hidden="true">
                     <div class="flex flex-col gap-5 mt-4 lg:mt-0">
-                        <h2 class="text-center text-white text-xl">
+                        <h2 class="text-center text-white text-xl uppercase">
                             Shopping cart
                         </h2>
                         <h4 class="text-right text-white">
                             Product list
                         </h4>
                         <div class="flex flex-wrap gap-3">
-                            <div v-for="product in cartProducts" class="flex justify-evenly items-center w-full">
-                                <img :src="product.thumbnailUrl" class="h-24 object-contain">
+                            <div v-for="product in cartProducts" class="flex justify-between items-center w-full border-b">
+                                <img :src="product.urlImg" class="pl-5 h-24 object-contain">
                                 <h3 class="text-white truncate w-[200px]">{{product.name}}</h3>
                                 <div
                                     class="bg-yellow-400  flex justify-between items-center gap-2 px-1 py-2 border rounded">
@@ -94,14 +94,13 @@
                                     <ion-icon @click="addCart(product)" class="cursor-pointer text-black text-2xl"
                                         name="add-outline"></ion-icon>
                                 </div>
-                            </div>
+                            </div> 
                         </div>
                     </div>
                 </div>
-
                 <!-- Mobile Menu open -->
                 <div v-cloak :class="[isOpen ? 'translate-x-0 opacity-100 ' : 'opacity-0 -translate-x-full']"
-                    class="absolute inset-x-0 z-20 w-full px-6 py-4 transition-all duration-300 ease-in-out  bg-[#1E1E1E] lg:mt-0 lg:p-0 lg:top-0 lg:relative lg:bg-transparent lg:w-auto lg:opacity-100 lg:translate-x-0 lg:flex lg:items-center">
+                    class="absolute inset-x-0 z-40 w-full px-6 py-4 transition-all duration-300 ease-in-out  bg-[#1E1E1E] lg:mt-0 lg:p-0 lg:top-0 lg:relative lg:bg-transparent lg:w-auto lg:opacity-100 lg:translate-x-0 lg:flex lg:items-center">
                     <div class="lg:hidden flex flex-col gap-5 mt-4 lg:mt-0">
                         <h2 class="text-center text-white text-xl">
                             Shopping cart
@@ -110,8 +109,8 @@
                             Product list
                         </h4>
                         <div class="flex flex-wrap gap-3">
-                            <div v-for="product in cartProducts" class="flex justify-evenly items-center w-full">
-                                <img :src="product.thumbnailUrl" class="h-24 object-contain">
+                            <div v-for="product in cartProducts" class="flex justify-between items-center w-full border-b">
+                                <img :src="product.urlImg" class="h-24 object-contain">
                                 <h3 class="text-white truncate w-[200px]">Whey protein z-10 aguante river</h3>
                                 <div
                                     class="bg-yellow-400  flex justify-between items-center gap-2 px-1 py-2 border rounded">
@@ -166,38 +165,41 @@
         <!-- PRODUCTS LIST  -->
         <div class="min-h-full w-[120vh]">
             <div class="p-5 flex flex-col">
-                <div class="flex justify-between w-[84%]">
+                <div class="flex justify-between items-center w-full lg:w-[87%]">
                     <h2 class="font-bold text-4xl cursor-default ">
                         Sale Off
                     </h2>
-                    <div class="flex items-center justify-center gap-2 border p-0 lg:p-2">
+                    <div class="flex items-center justify-center gap-2 border p-2">
                         <ion-icon class="text-2xl" name="search-outline"></ion-icon>
-                        <input @keyup="searchFilter" v-model="searchFilterInput" class=" focus:outline-none"
+                        <input @keyup="searchFilter" v-model="searchFilterInput" class="border-none focus:outline-none"
                             type="search" name="search" id="search" placeholder="What do you need?">
                     </div>
                 </div>
 
-                <div class="flex gap-2 lg:gap-10 flex-wrap pt-5">
+                <div class="flex gap-10 lg:gap-10 flex-wrap pt-5">
                     <!-- CARDS-->
                     <div v-for="(product, i) in filteredProducts"
-                        class="overflow-hidden rounded shadow flex flex-col gap-2 h-[430px] w-full lg:w-[290px] lg:h-[430px]">
-                        <div class="flex items-center shadow-lg justify-center">
+                        class="lg:border-0 border overflow-hidden rounded shadow flex flex-col gap-2 h-[300px] w-full lg:w-[290px] lg:h-[430px]">
+                        <div class="relative flex items-center justify-center">
+                            <div v-if="product.stock < 5" class=" absolute left-0 top-3 rounded-r bg-red-600 z-20">
+                                <p class="p-2 px-4 text-white uppercase bold">Few units left</p>
+                            </div>
                             <img :src="product.urlImg"
-                                class="hover:rotate-0 lg:hover:rotate-12 object-cover h-[210px] z-10 transition-all duration-150 hover:scale-100 lg:hover:scale-[1.4] absolute"
+                                class="hover:rotate-0 lg:hover:rotate-12 object-cover h-48 lg:h-[210px] z-10 transition-all duration-150 hover:scale-100 lg:hover:scale-[1.4] relative lg:absolute"
                                 alt="product.id">
-                            <div class="absolute z-0 bg-gray-900/50 h-[290px] w-[290px]"></div>
+                            <div class="lg:visible invisible absolute z-0 bg-gray-600/25 h-[290px] w-[290px]"></div>
                             <img v-if="i % 2 == 0" class="hidden lg:block object-cover" :src="productsBg[1]"
                                 alt="NIKE AIR">
                             <img v-else class="hidden lg:block object-cover" :src="productsBg[0]">
                         </div>
-                        <div class="flex flex-col justify-between h-full">
-                            <h2 class="text-xl font-medium text-gray-700 ">{{product.name}}</h2>
+                        <div class="flex flex-col justify-between h-full lg:bg-white bg-[#1e1e1e]">
+                            <h2 class="truncate-shop text-xl font-medium text-white lg:text-gray-700 p-2">{{product.name}}</h2>
                             <div class="flex justify-between items-center p-3">
-                                <h3 class="font-bold text-xl text-[#1e1e1e]">{{moneyFormat.format(product.price)}}</h3>
+                                <h3 class=" font-bold text-xl text-white lg:text-[#1e1e1e]">{{moneyFormat.format(product.price)}}</h3>
                                 <button @click="addCart(product)"
-                                    class="hover:bg-[#f1d24d] transition-all duration-150 flex flex-row-reverse gap-2 jusfy-around items-center bg-gray-900 px-2 py-1 rounded">
-                                    <h4 class="text-white font-medium">Add to cart</h4>
-                                    <div class="relative transition-colors duration-300 transform text-white">
+                                    class="lg:text-white text-black bg-[#f1d24d] lg:hover:bg-[#f1d24d] transition-all duration-150 flex flex-row-reverse gap-2 jusfy-around items-center lg:bg-gray-900 px-2 py-1 rounded">
+                                    <h4 class="font-medium">Add to cart</h4>
+                                    <div class="relative transition-colors duration-300 transform ">
                                         <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
