se agregó la carpeta con las imagenes "products"

--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -57,6 +57,9 @@
         </div>
     </div>
 
+    <!-- MODAL PURCHASE start -->
+
+    <!-- MODAL PURCHASE end-->
     <!--====== PRELOADER PART ENDS ======-->
 
     <!--====== HEADER PART START ======-->
