condicional para que las imagenes no se borren + comienzo de peticiones al back

--- a/src/main/resources/static/web/manager.html
+++ b/src/main/resources/static/web/manager.html
@@ -329,7 +329,9 @@
 
 
     <!--====== Main js ======-->
-    <script src="assets/js/main.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="assets/js/manager.js"></script>
 
 </body>
 
