--- a/src/main/resources/static/web/chekout.html
+++ b/src/main/resources/static/web/chekout.html
@@ -104,7 +104,7 @@
                         <p class="font-medium text-xl justify-self-end self-start ">
                             {{product.quantity}}
                         </p>
-                        <ion-icon class="text-2xl justify-self-end self-start " name="close-outline"></ion-icon>
+                        <ion-icon @click="deleteItem(product)" class="text-2xl justify-self-end self-start " name="close-outline"></ion-icon>
                     </div>
                 </div>
             </div>    
@@ -116,19 +116,19 @@
                 <div class="flex flex-col">
                     <div class="flex justify-between items-center m-3 border-b">
                         <p class="p-2">Subtotal</p>
-                        <p>$54</p>
+                        <p>{{moneyFormat.format(subtotal)}}</p>
                     </div>
                     <div class="flex justify-between items-center m-3 border-b">
                         <p class="p-2">Shipping Estimate</p>
-                        <p>$54</p>
+                        <p>{{moneyFormat.format(shippingEstimate)}}</p>
                     </div>
                     <div class="flex justify-between items-center m-3 border-b">
                         <p class="p-2">Tax Estimate</p>
-                        <p>$22</p>
+                        <p>{{moneyFormat.format(subtotal * taxEstimate)}}</p>
                     </div>
                     <div class="flex justify-between items-center m-3">
                         <h3 class="font-bold">Order Total: </h3>
-                        <h3 class="font-bold">$542</h3>
+                        <h3 class="font-bold">{{moneyFormat.format(subtotal * (1 + taxEstimate) + shippingEstimate)}}</h3>
                     </div>
                 </div>
                 <button @click="makePayment" class="w-full bg-sky-500 rounded shadow text-white font-bold py-2">
