cambios en la landing (vide)

--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -111,7 +111,8 @@
             </div> <!-- container -->
         </div> <!-- navbar area -->
 
-        <div id="home" class="header-hero bg_cover d-flex align-items-center" style="background-image: url(assets/images/slider-1.jpg)">
+        <div id="home" class="header-hero bg_cover d-flex align-items-center">
+          <video muted autoplay loop type="video/mp4" src="./assets/images/videos/landingVideo.mp4"></video>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
