funciones de chekout

--- a/src/main/resources/static/web/shop.html
+++ b/src/main/resources/static/web/shop.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="flex w-full items-center justify-between">
                             <button class="w-[65%] bg-green-700 px-5 py-2 rounded text-white font-bold">
-                                <p>Continue checkout</p> 
+                                <a href="./checkout.html">Continue checkout</a> 
                             </button>
                             <button @click="cleanCart" class="w-[30%] flex justify-center gap-2 items-center bg-red-700 px-5 py-2 rounded text-white">
                                 <ion-icon class="text-xl" name="trash-outline"></ion-icon>
