"Mejoras en los estilos, nav, videos, linkeado"

--- a/src/main/resources/static/web/contact.html
+++ b/src/main/resources/static/web/contact.html
@@ -43,7 +43,7 @@
 
     <!--====== PRELOADER PART START ======-->
 
-    <div class="preloader">
+    <!--  <div class="preloader">
         <div class="loader">
             <div class="ytp-spinner">
                 <div class="ytp-spinner-container">
@@ -58,20 +58,26 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!--====== PRELOADER PART ENDS ======-->
 
     <!--====== HEADER PART START ======-->
 
     <header class="header-area">
-        <div class="navbar-area">
+        <div class="navbar-areaBlog">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logofinal.png" alt="Logo">
+                            <a class="d-flex flex-row justify-content-center align-items-center navbar-brand "
+                                href="index.html">
+                                <img class="pr-3" style="height: 70px;" src="assets/images/logo-Balcam-white.png"
+                                    alt="Logo">
+                                <div class="pt-2 d-flex flex-column justify-content-center align-items-center">
+                                    <H4 class="h4Balcam">BALCAM <span class="yellow-color">'S</span></H4>
+                                    <h4 class="h4Balcam">GYM</h4>
+                                </div>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -93,7 +99,7 @@
                                         <a class="page-scroll" href="#about">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#">Shop</a>
+                                        <a class="page-scroll" href="./shop.html">Shop</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#pricing">Membership</a>
@@ -109,11 +115,13 @@
             </div> <!-- container -->
         </div> <!-- navbar area -->
 
+
+
     </header>
 
     <!--====== HEADER PART ENDS ======-->
     <!--====== CONTACT PART START ======-->
-  
+
     <section id="contact" class="contact_area">
         <div class="container">
             <div class="d-flex flex-column align-items-center">
@@ -126,24 +134,24 @@
                         <form id="contact-form" action="assets/contact.php" method="post">
                             <div class="single_form">
                                 <input type="text" name="name" placeholder="Name">
-                            </div> 
+                            </div>
                             <div class="single_form">
                                 <input type="text" name="email" placeholder="Email">
-                            </div> 
+                            </div>
                             <div class="single_form">
                                 <input type="text" name="subject" placeholder="Subject">
-                            </div> 
+                            </div>
                             <div class="single_form">
                                 <textarea name="message" placeholder="Message"></textarea>
-                            </div> 
+                            </div>
                             <p class="form-message"></p>
                             <div class="single_form">
                                 <button class="main-btn">SUBMIT</button>
-                            </div> 
-                    </div> 
+                            </div>
+                    </div>
                 </div>
-            </div> 
-        </div> 
+            </div>
+        </div>
     </section>
 
     <!--====== CONTACT PART ENDS ======-->
@@ -178,7 +186,7 @@
                             <div class="d-flex">
                                 <a href="https://wa.link/d73goe"><img src="./assets/images/phone.png"
                                         style="width: 30px; height: 30px;" alt="logowsp">
-                                <span class="m-1 text-dark">+19294809543</span></a>
+                                    <span class="m-1 text-dark">+19294809543</span></a>
                             </div>
                         </div>
                     </div>
@@ -222,7 +230,7 @@
                             <div class="d-flex">
                                 <a href="https://wa.link/d73goe"><img src="./assets/images/phone.png"
                                         style="width: 30px; height: 30px;" alt="logowsp">
-                                <span class="m-1 text-dark">+13322081423</span></a>
+                                    <span class="m-1 text-dark">+13322081423</span></a>
                             </div>
                         </div>
                     </div>
@@ -246,7 +254,7 @@
                             <div class="d-flex">
                                 <a href="https://wa.link/d73goe"><img src="./assets/images/phone.png"
                                         style="width: 30px; height: 30px;" alt="logowsp">
-                                <span class="m-1 text-dark">+16469804745</span></a>
+                                    <span class="m-1 text-dark">+16469804745</span></a>
                             </div>
                         </div>
                     </div>
@@ -269,7 +277,7 @@
                             <div class="d-flex">
                                 <a href="https://wa.link/d73goe"><img src="./assets/images/phone.png"
                                         style="width: 30px; height: 30px;" alt="logowsp">
-                                <span class="m-1 text-dark">+16469806468</span></a>
+                                    <span class="m-1 text-dark">+16469806468</span></a>
                             </div>
                         </div>
                     </div>
@@ -291,7 +299,7 @@
                             <div class="d-flex">
                                 <a href="https://wa.link/d73goe"><img src="./assets/images/phone.png"
                                         style="width: 30px; height: 30px;" alt="logowsp">
-                                <span class="m-1 text-dark">+19292351621</span></a>
+                                    <span class="m-1 text-dark">+19292351621</span></a>
                             </div>
                         </div>
                     </div>
@@ -312,8 +320,8 @@
 
     <!--====== FOOTER PART START ======-->
 
-    <section id="footer" class="footer_area pt-5">
-        <div class="footer_widget mt-2 ">
+    <section id="footer" class="footer_area">
+        <div class="footer_widget mt-2 pb-100 pt-100">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6">
@@ -321,34 +329,34 @@
                             <h4 class="footer_title">Contact</h4>
                             <ul class="info">
                                 <li>Phone: 093826715212</li>
+                                <li><a href="https://wa.link/d73goe"><i class="lni lni-whatsapp"></i></a>Whatsapp</li>
                                 <li>Email: balcamscontact@gmail.com</li>
                                 <li>Location: Jackson Heights, New York, USA</li>
                             </ul>
                         </div> <!-- footer info -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="footer_link mt-45">
+                        <div class="footer_info mt-45">
                             <h4 class="footer_title">Course</h4>
-                            <ul class="link">
-                                <li><a href="javascript:void(0)">Gym</a></li>
-                                <li><a href="javascript:void(0)">Body Building</a></li>
-                                <li><a href="javascript:void(0)">Yoga</a></li>
-                                <li><a href="javascript:void(0)">Spinning</a></li>
-                                <li><a href="javascript:void(0)">Kick-boxing</a></li>
-                                <li><a href="javascript:void(0)">Crossfit</a></li>
+                            <ul class="info">
+                                <li>Gym</li>
+                                <li>Body Building</li>
+                                <li>Yoga</li>
+                                <li>Spinning</li>
+                                <li>Kick-boxing</li>
+                                <li>Crossfit</li>
                             </ul>
-
                         </div> <!-- footer info -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="footer_link mt-45">
                             <h4 class="footer_title">Quick Link</h4>
                             <ul class="link">
-                                <li><a href="javascript:void(0)">Home</a></li>
-                                <li><a href="javascript:void(0)">Lessons</a></li>
-                                <li><a href="javascript:void(0)">About</a></li>
-                                <li><a href="javascript:void(0)">Shop</a></li>
-                                <li><a href="javascript:void(0)">Membership</a></li>
+                                <li><a href="#courses">Lessons</a></li>
+                                <li><a href="./blog.html">Advices</a></li>
+                                <li><a href="./shop.html">Shop</a></li>
+                                <li><a href="#">Membership</a></li>
+                                <li><a href="#">Home</a></li>
                             </ul>
                         </div> <!-- footer info -->
                     </div>
@@ -356,10 +364,13 @@
                         <div class="footer_social mt-45">
                             <h4 class="footer_title">Follow Us On</h4>
                             <ul class="social">
-                                <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-instagram-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
+                                <li><a href="https://www.facebook.com/"><i class="lni lni-facebook-filled"></i></a></li>
+                                <li><a href="https://twitter.com/"><i class="lni lni-twitter-original"></i></a></li>
+                                <li><a href="https://www.instagram.com/"><i class="lni lni-instagram-original"></i></a>
+                                </li>
+                                <li><a href="https://www.linkedin.com/"><i class="lni lni-linkedin-original"></i></a>
+                                </li>
+
                             </ul>
                         </div> <!-- footer info -->
                     </div>
@@ -377,7 +388,6 @@
     </section>
 
     <!--====== FOOTER PART ENDS ======-->
-
     <!--====== BACK TOP TOP PART START ======-->
 
     <a href="#" class="back-to-top"><i class="lni lni-chevron-up"></i></a>
