--- a/src/main/resources/static/web/shop.html
+++ b/src/main/resources/static/web/shop.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
     <link rel="shortcut icon" href="./assets/images/favicon-32x32.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../web/assets/css/shop.css">
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-
+    
+    <title>Shop- Balcam's</title>
 </head>
 
 <body id="app">
@@ -21,15 +22,15 @@
                 <div class="flex items-center justify-between w-full">
                     <div class="text-xl font-semibold text-gray-700">
                         <a class="text-2xl font-bold block transition-colors duration-300 transform text-white lg:text-3xl hover:text-gray-300"
-                            href="#">
+                            href="./index.html">
                             BALCAM '<span class="text-yellow-400">S</span>
                             <br>
-                            <span class="text-center font-thin text-sm">shop</span>
+                            <span class="text-center font-thin text-sm" href="./index.html" >Home</span>
                         </a>
                     </div>
 
                     <div class="pt-2 hidden lg:flex flex-col items-center justify-center">
-                        <h1 class="text-3xl font-bold text-white">Balcam's shop</h1>
+                        <h1 class="text-3xl font-bold text-white">SHOP</h1>
                         <h3 class="text-xl text-white font-thin pt-2">Welcome to the shop of your best gym, we have what
                             you
                             are looking for!</h3>
