--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -71,10 +71,10 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="d-flex flex-row justify-content-center align-items-center navbar-brand " href="index.html">
-                                <img class="pr-3" style="height: 70px;" src="assets/images/logoBalcam-01-01.png" alt="Logo">
+                                <img class="pr-3" style="height: 70px;" src="assets/images/logo-Balcam-white.png" alt="Logo">
                                 <div class="pt-2 d-flex flex-column justify-content-center align-items-center">
-                                    <H4>BALCAM <span class="yellow-color">'S</span></H4>
-                                    <h4>GYM</h4>
+                                    <H4 class="h4Balcam">BALCAM <span class="yellow-color">'S</span></H4>
+                                    <h4 class="h4Balcam">GYM</h4>
                                 </div>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,13 +95,13 @@
                                         <a class="page-scroll" href="#about">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#">Shop</a>
+                                        <a class="page-scroll" href="./shop.html">Shop</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#pricing">Membership</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#">Contact</a>
+                                        <a class="page-scroll" href="./contact.html">Contact</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -111,17 +111,19 @@
             </div> <!-- container -->
         </div> <!-- navbar area -->
 
-        <div id="home" class="header-hero bg_cover d-flex align-items-center">
-          <video muted autoplay loop type="video/mp4" src="./assets/images/videos/landingVideo.mp4"></video>
-            <div class="container">
+        <div id="home" class="header-hero bg_cover align-items-center">
+            <video autoplay muted loop id="myVideo">
+                <source src="./assets/images/videos/landingVideo.mp4" type="video/mp4">
+              </video>
+            <div class="container" >
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
                         <div class="header-hero-content text-center">
                             <h3 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Balcam's is the best option</h3>
                             <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">This gym is the best you can choose, if what you want is a real change in your physical appearance</p>
                             <ul>
-                                <li><a href="/loginandsignup.html"  rel="nofollow" target="_blank" class="main-btn wow fadeInUp font-weight-bold" data-wow-duration="1.3s" data-wow-delay="0.8s">Register FREE Now</a></li>
-                                <li><a href="/web/shop.html" class="main-btn main-btn-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.2s">Shop NOW</a></li>
+                                <li><a href="/loginandsignup.html"  rel="nofollow" target="_blank" class="main-btn wow fadeInUp font-weight-bold mb-2" data-wow-duration="1.3s" data-wow-delay="0.8s">Register FREE Now</a></li>
+                                <li><a href="/web/shop.html" class="main-btn main-btn-2 wow fadeInUp mb-2" data-wow-duration="1.3s" data-wow-delay="1.2s">Shop NOW</a></li>
                             </ul>
                         </div> <!-- header hero content -->
                     </div>
@@ -150,14 +152,18 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="single_courses mt-30">
-                        <img src="assets/images/courses-1.jpg" alt="courses">
+                        <video autoplay muted loop id="myVideo">
+                            <source src="./assets/images/videos/landingVideo0.mp4" type="video/mp4">
+                          </video>
                         <h4 class="title"><a href="javascript:void(0)">Gym</a></h4>
                         <p>Get the physique you want thanks to our personalized team in the fitness area. different exercise equipment is used and a routine is carried out according to days where the upper or lower body is worked</p>
                     </div> <!-- single courses -->
                 </div>
                 <div class="col-md-4">
                     <div class="single_courses mt-30">
-                        <img src="assets/images/courses-2.jpg" alt="courses">
+                        <video autoplay muted loop id="myVideo">
+                            <source src="./assets/images/videos/landingVideo2.mp4" type="video/mp4">
+                          </video>
                         <h4 class="title"><a href="javascript:void(0)">Body Building</a></h4>
                         <p>Bodybuilding is a discipline that aims to burn fat and build muscle by lifting weights and performing anaerobic exercises.
                             The idea of this practice is that the person is left with a marked, strong and defined body. Also maintain a symmetry between the torso and the legs.</p>
@@ -165,7 +171,9 @@
                 </div>
                 <div class="col-md-4">
                     <div class="single_courses mt-30">
-                        <img src="assets/images/courses-3.jpg" alt="courses">
+                        <video autoplay muted loop id="myVideo">
+                            <source src="./assets/images/videos/landingVideo4.mp4" type="video/mp4">
+                          </video>
                         <h4 class="title"><a href="javascript:void(0)">Yoga</a></h4>
                         <p>Yoga is a practice that connects the body, breath and mind. This practice uses physical postures, breathing exercises, and meditation to improve overall health. It helps among other things to lower your blood pressure and heart rate, help you relax, improve your self-confidence, reduce stress, improve your coordination, improve your concentration, help you sleep better, and more.</p>
                     </div> <!-- single courses -->
@@ -177,21 +185,28 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="single_courses mt-30">
-                        <img src="assets/images/courses-4.jpg" alt="courses">
+                        <video autoplay muted loop id="myVideo">
+                            <source src="./assets/images/videos/landingVideo8.mp4" type="video/mp4">
+                          </video>
                         <h4 class="title"><a href="javascript:void(0)">Spinning</a></h4>
                         <p>Spinning is a collective physical exercise, which is performed on a stationary bicycle to the rhythm of music, in which high-intensity cardiovascular work is carried out with very high intervention of the large muscle groups of the lower body.</p>
                     </div> <!-- single courses -->
                 </div>
+
                 <div class="col-md-4">
                     <div class="single_courses mt-30">
-                        <img src="assets/images/courses-5.jpg" alt="courses">
+                        <video autoplay muted loop id="myVideo">
+                            <source src="./assets/images/videos/landingVideo6.mp4" type="video/mp4">
+                          </video>
                         <h4 class="title"><a href="javascript:void(0)">Kick-boxing</a></h4>
                         <p>Kick boxing is a contact sport that alternates boxing blows and martial arts kicks. Generally, this name is used to refer to those exercises that combine kicks and punches. It is a great sport that combines strength, resistance and aerobic exercise, which makes it very complete and beneficial.</p>
                     </div> <!-- single courses -->
                 </div>
                 <div class="col-md-4">
                     <div class="single_courses mt-30">
-                        <img src="assets/images/courses-6.jpg" alt="courses">
+                        <video autoplay muted loop id="myVideo">
+                            <source src="./assets/images/videos/landingVideo7.mp4" type="video/mp4">
+                          </video>
                         <h4 class="title"><a href="javascript:void(0)">Crossfit</a></h4>
                         <p>CrossFit is a type of functional exercise training, constantly varied, executed at high intensity. It is a program of strength and total physical conditioning, which is based on the increase of the ten most recognized physical capacities by specialists in sports training with weights. During the exercise, the aim is to develop muscle strength and tone and increase the functionality of the muscles to repeat the movements.</p>
                     </div> <!-- single courses -->
@@ -216,10 +231,11 @@
                             <div class="about_content_wrapper">
                                 <div class="section_title">
                                     <span class="line"></span>
-                                    <h3 class="title">Learn More About Us</h3>
-                                    <p>Inaugurated in 2002, Smart Fit was created with the purpose of facilitating access to high-quality physical activity, with accessible plans and easy registration. </p>
+                                    <h3 class="title">Read About Some Advices</h3>
+                                    <p>Some tips to make your training as expected according to our specialists in physical preparation and nutrition. </p>
                                 </div> <!-- section title -->
-                                <a href="javascript:void(0)" class="main-btn">Read More</a>
+                                <!-- <a href="javascript:void(0)"  class="main-btn">Read More</a> -->
+                                <a href="./blog.html"  class="main-btn">Read More</a>
                             </div> <!-- about content wrapper -->
                         </div> <!-- about content -->
                     </div>
@@ -480,34 +496,34 @@
                             <h4 class="footer_title">Contact</h4>
                             <ul class="info">
                                 <li>Phone: 093826715212</li>
+                                <li><a href="https://wa.link/d73goe"><i class="lni lni-whatsapp"></i></a>Whatsapp</li>
                                 <li>Email: balcamscontact@gmail.com</li>
                                 <li>Location:    Jackson Heights, New York, USA</li>
                             </ul>
                         </div> <!-- footer info -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="footer_link mt-45">
+                        <div class="footer_info mt-45">
                             <h4 class="footer_title">Course</h4>
-                            <ul class="link">
-                                <li><a href="javascript:void(0)">Gym</a></li>
-                                <li><a href="javascript:void(0)">Body Building</a></li>
-                                <li><a href="javascript:void(0)">Yoga</a></li>
-                                <li><a href="javascript:void(0)">Spinning</a></li>
-                                <li><a href="javascript:void(0)">Kick-boxing</a></li>
-                                <li><a href="javascript:void(0)">Crossfit</a></li>
+                            <ul class="info">
+                                    <li>Gym</li>
+                                    <li>Body Building</li>
+                                    <li>Yoga</li>
+                                    <li>Spinning</li>
+                                    <li>Kick-boxing</li>
+                                    <li>Crossfit</li>
                             </ul>
-                            
                         </div> <!-- footer info -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="footer_link mt-45">
                             <h4 class="footer_title">Quick Link</h4>
                             <ul class="link">
-                                <li><a href="javascript:void(0)">Home</a></li>
-                                <li><a href="javascript:void(0)">Lessons</a></li>
-                                <li><a href="javascript:void(0)">About</a></li>
-                                <li><a href="javascript:void(0)">Shop</a></li>
-                                <li><a href="javascript:void(0)">Membership</a></li>
+                                <li><a href="#courses">Lessons</a></li>
+                                <li><a href="./blog.html">Advices</a></li>
+                                <li><a href="./shop.html">Shop</a></li>
+                                <li><a href="#">Membership</a></li>
+                                <li><a href="#">Home</a></li>
                             </ul>
                         </div> <!-- footer info -->
                     </div>
@@ -515,10 +531,11 @@
                         <div class="footer_social mt-45">
                             <h4 class="footer_title">Follow Us On</h4>
                             <ul class="social">
-                                <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-instagram-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
+                                <li><a href="https://www.facebook.com/"><i class="lni lni-facebook-filled"></i></a></li>
+                                <li><a href="https://twitter.com/"><i class="lni lni-twitter-original"></i></a></li>
+                                <li><a href="https://www.instagram.com/"><i class="lni lni-instagram-original"></i></a></li>
+                                <li><a href="https://www.linkedin.com/"><i class="lni lni-linkedin-original"></i></a></li>
+                               
                             </ul>
                         </div> <!-- footer info -->
                     </div>
