--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -119,7 +119,7 @@
                             <h3 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Balcam's is the best option</h3>
                             <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">This gym is the best you can choose, if what you want is a real change in your physical appearance</p>
                             <ul>
-                                <li><a href="/loginandsignup.html"  rel="nofollow" target="_blank" class="main-btn wow fadeInUp font-weight-bold" data-wow-duration="1.3s" data-wow-delay="0.8s">Register FREE Now</a></li>
+                                <li><a href="./login.html"  rel="nofollow" class="main-btn wow fadeInUp font-weight-bold" data-wow-duration="1.3s" data-wow-delay="0.8s">Register FREE Now</a></li>
                                 <li><a href="/web/shop.html" class="main-btn main-btn-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.2s">Shop NOW</a></li>
                             </ul>
                         </div> <!-- header hero content -->
