--- a/src/main/resources/static/web/shop.html
+++ b/src/main/resources/static/web/shop.html
@@ -21,7 +21,7 @@
                 <div class="flex items-center justify-between w-full">
                     <div class="text-xl font-semibold text-gray-700">
                         <a class="text-2xl font-bold block transition-colors duration-300 transform text-white lg:text-3xl hover:text-gray-300"
-                            href="#">
+                            href="./index.html">
                             BALCAM '<span class="text-yellow-400">S</span>
                             <br>
                             <span class="text-center font-thin text-sm">shop</span>
