--- a/src/main/resources/static/web/checkout.html
+++ b/src/main/resources/static/web/checkout.html
@@ -75,7 +75,7 @@
         </div>
     </nav>
 
-    <div id="app" @click="outClick"> 
+    <div id="app" class="overflow-y-hidden" @click="outClick"> 
         <transition>
             <div v-if="purchaseAlertSucces" class="z-50 absolute top-0 w-full text-white bg-emerald-500">
                 <div class="container flex items-center justify-between px-6 py-4 mx-auto">
@@ -115,8 +115,8 @@
             </div>
         </transition>
         <section v-if="cartProducts.length > 0" class="bg-white relative flex flex-col gap-5 justify-center lg:flex-row w-full ">
-            <div class="gap-5 flex flex-col ">
-                <div v-for="product in cartProducts"
+            <div :class="{'h-[87vh]':modal}" class="gap-5 flex flex-col ">
+                <div :class="{'hidden': modal}" v-for="product in cartProducts"
                     class="flex flex-row justify-around items-center w-[800px] h-[350px] border m-5">
                     <div class="h-24 w-24 flex justify-center items-center border ">
                         <img :src="product.urlImg">
@@ -176,7 +176,8 @@
                             </h3>
                         </div>
                     </div>
-                    <button @click="modal = !modal" class="w-full bg-sky-500 rounded shadow text-white font-bold py-2">
+                    <a v-if="client == ''"  href="./login.html"><button class="w-full bg-sky-500 rounded shadow text-white font-bold py-2">Checkout </button></a>
+                    <button v-else @click="modal = !modal" class="w-full bg-sky-500 rounded shadow text-white font-bold py-2">
                         Checkout
                     </button>
                 </div>
